# peppy

./: .gitignore  README.md
.github/worfklows/: functions.yml
.github/workflows/: functions.yml  gofmt.yml  terraform.yml
diagrams/: .gitignore  enqueue.drawio  lock.drawio
functions/: build.sh  upload.sh
functions/_rust-pkg/graphql/: Cargo.toml  Makefile
functions/_rust-pkg/graphql/src/: lib.rs
functions/healthcheck/: Cargo.toml  Makefile  test.json
functions/healthcheck/src/: main.rs
functions/ip-lookup/: Cargo.toml  Makefile  test.json
functions/ip-lookup/src/: main.rs
functions/ip-lookup/src/lib/: client.rs
functions/process-healthcheck/: Cargo.toml  test.json
functions/process-healthcheck/src/: main.rs
functions/process-match/: Cargo.toml  test.json
functions/process-match/src/: main.rs
functions/process-queue/: Cargo.toml  Makefile
functions/process-queue/src/lib/: client.rs
functions/queue-process/: Cargo.toml
functions/queue-process/src/: main.rs
functions/queue-process/src/lib/: client.rs
functions/rust/: Cargo.toml  Makefile
functions/rust/pkg/appsync/: Cargo.toml
functions/rust/pkg/appsync/src/: lib.rs
functions/rust/pkg/queue-processor/: Cargo.toml
functions/rust/pkg/queue-processor/src/: lib.rs
functions/rust/test-events/authorizer/: authorized.json  unauthorized.json
functions/rust/test-events/healthcheck/: cron.json
functions/rust/test-events/ip-lookup/: empty-ip.json
functions/rust/test-events/process-healthcheck/: insert.json
functions/rust/test-events/process-match/: solo-match-single.json
functions/test/: test.py
schema/: __root.graphql
schema/reference-queries/: healthcheck.graphql  unranked-solo.graphql
stacks/: artifacts.yaml  permissions.yaml  tfstate.yaml
terraform/: .gitignore  .terraform.lock.hcl  _datasources.tf  _locals.tf  _providers.tf  _variables.tf  alarms.tf  appsync-iam.tf  appsync.tf  cdktf.json  certs.tf  dynamo-healthcheck.tf  dynamo-ip-cache.tf  dynamo-matches-unranked-solo.tf  dynamo-mmr-unranked-solo.tf  dynamo-process-lock.tf  dynamo-queue-unranked-solo.tf  dynamo-streams.tf  dynamo.tf  eventbridge.tf  eventbus.tf  go.mod  go.sum  iam-policies.tf  kms.tf  lambda-iam.tf  lambda.tf  main.go  resource-groups.tf  secrets.tf
terraform/config/: dev.json
terraform/config/dev/: backend.tfvars  vars.tfvars
terraform/lib/_common/: const.go  generics.go  policy.go  tranformations.go  types.go
terraform/lib/_config/: config.go
terraform/lib/api/: aaaa_index.go  appsync-api.go  appsync-cert.go  appsync-functions.go  appsync-resolvers.go  appsync-role.go  authorizer.go  tables.go
terraform/lib/base/: aaaa_index.go  datasources.go  kms.go  policies.go  provider.go  resource-group.go
terraform/lib/data/: data.go
terraform/lib/healthcheck/: aaaa_index.go  alarm.go  cron.go  healthcheck-responder.go  healthchecker.go
terraform/lib/ip-lookup/: ip-lookup.go
terraform/lib/kms/: kms.go
terraform/lib/lock-table/: lock-table.go
terraform/lib/match-make/: match-make.go
terraform/lib/match-publish/: match-publish.go
terraform/lib/provider/: provider.go
terraform/modules/alarms/: _outputs.tf  _providers.tf  _variables.tf  alarms.tf  sns.tf
terraform/modules/appsync/: _outputs.tf  _variables.tf  dns.tf  functions.tf  main.tf  resolvers.tf
terraform/modules/eventbridge/: _variables.tf  healthcheck.tf
terraform/modules/functions/: _locals.tf  _outputs.tf  _variables.tf  lambda-healthcheck-responder.tf  lambda-healthcheck.tf  lambda-ip-lookup.tf  lambda-match-publisher.tf  lambda-queue-processor-unranked-solo.tf
terraform/modules/kms-replica/: _locals.tf  _outputs.tf  _variables.tf  kms.tf
vtl/: _global.req.vm  cache-ip.req.vm  cache-ip.resp.vm  check-ip-cache.req.vm  check-ip-cache.resp.vm  enqueue.req.vm  enqueue.resp.vm  get-mmr.resp.vm  get-user.req.vm  get-user.resp.vm  healthcheck-response.req.vm  healthcheck-response.resp.vm  lookup-ip.req.vm  lookup-ip.resp.vm  match-single.req.vm  match-single.resp.vm  match.resp.vm  post-healthcheck.req.vm  post-healthcheck.resp.vm  publish-enqueue.req.vm  publish-enqueue.resp.vm
vtl/tests/: _evaluate.py
vtl/tests/cases/: cache-ip.yaml  check-ip-cache.yaml  enqueue.yaml  get-mmr.yaml  get-user.yaml  healthcheck-response.yaml  lookup-ip.yaml  match-single.yaml  match.yaml  post-healthcheck.yaml  publish-enqueue.yaml
