[package]
name = "ip-lookup"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
RUST_LOG = "debug"
SECRET_ARN = "slippi-api-ip-lookup-test"

[dependencies]

lambda_runtime = "0.6.1"
serde = "1.0.136"
aws-config = "0.49.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
reqwest = { version = "0.11.12", features = ["json"] }
# specifying "vendored" here avoids some headaches cross-compiling this
openssl = { version = "0.10.41", features = ["vendored"] }
aws-sdk-secretsmanager = "0.19.0"
