[package]
name = "process-healthcheck"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
RUST_LOG = "warn"
API_URL = "https://us-east-1.slippi.yeezyfan.club/graphql"

[dependencies.graphql]
path = "../_rust-pkg/graphql"

[dependencies]
aws_lambda_events = { version = "0.7", default-features = false, features = ["dynamodb"] }
lambda_runtime = "0.6.1"
aws-config = "0.49.0"
aws-types = "0.49.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_dynamo = { version = "4", features = ["aws_lambda_events+0_7"] }
serde = "1.0.145"
futures = "0.3.24"