[package]
name = "queue-process"
version = "0.1.0"
edition = "2021"

[lib]
name = "queue_processor"
path = "src/lib/client.rs"

[[bin]]
name = "unranked-solo"
path = "src/bin/unranked-solo.rs"

[package.metadata.lambda.env]
RUST_LOG = "warn"
LOCK_REGIONS = "us-east-1,us-east-2"
QUEUE_INDEX = "queue_sort"
LOCK_TABLE = "slippi-api-process-lock"

[package.metadata.lambda.bin.unranked-solo.env]
QUEUE_TABLE = "slippi-api-queue-unranked-solo"

[dependencies]
aws_lambda_events = { version = "0.6.3", default-features = false, features = ["dynamodb"] }
lambda_runtime = "0.6.1"
aws-config = "0.49.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_19"] }
aws-sdk-dynamodb = "0.19.0"
aws-types = "0.49.0"
once_cell = "1.15.0"
ksuid = "0.2.0"
