[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.49.0"
aws-types = "0.49.0"
serde = "1.0.145"
serde_json = "1.0.85"
aws-sig-auth = "0.49.0"
aws-smithy-http = "0.49.0"
http = "0.2.8"
reqwest = { version = "0.11.12", features = ["stream", "json"] }
# specifying "vendored" here avoids some headaches cross-compiling this
openssl = { version = "0.10.41", features = ["vendored"] }
