[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.49.0"
aws-types = "0.49.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
aws-sig-auth = "0.49.0"
aws-smithy-http = "0.49.0"
http = "0.2.8"
reqwest = { version = "0.11.12", features = ["stream", "json"] }
tungstenite = "0.17.3"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls-vendored"] }
url = "2.3.1"
base64 = "0.13.0"
# specifying "vendored" here avoids some headaches cross-compiling this
openssl = { version = "0.10.41", features = ["vendored"] }
uuid = { version = "1.1.2", features = ["v4"] }
futures-util = "0.3.24"
futures = "0.3.24"
