[package]
name = "appsync"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.49.0"
aws-sig-auth = "0.49.0"
aws-smithy-http = "0.49.0"
aws-types = "0.49.0"
base64 = "0.13.0"
futures = "0.3.24"
futures-util = "0.3.24"
http = "0.2.8"
openssl = { version = "0.10.41", features = ["vendored"] }
reqwest = { version = "0.11.12", features = ["stream", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls-vendored"] }
tungstenite = "0.17.3"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4"] }