[package]
name = "queue_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
aws-config = "0.49.0"
aws_lambda_events = { version = "0.7", default-features = false, features = ["dynamodb"] }
aws-sdk-dynamodb = "0.19.0"
aws-types = "0.49.0"
futures = "0.3.24"
lambda_runtime = "0.6.1"
once_cell = "1.15.0"
serde = "1.0.145"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_19", "aws_lambda_events+0_7"] }
svix-ksuid = "0.6.0"
# tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
